[tool.poetry]
name = "onetimesecretapi"
version = "0.1.0"
description = ""
authors = ["pecheritsa <pecheritsa.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
cryptography = "^44.0.0"
python-dotenv = "^1.0.1"
motor = "^3.6.0"
black = "^24.10.0"
isort = "^5.13.2"
httpx = "^0.28.1"
passlib = "^1.7.4"
authx = "^1.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120